[279]: Fix UserAlertsWebSocket and update path for CrossOriginFilter