@@ -5,8 +5,6 @@ import static uk.ac.cam.cl.dtg.segue.api.monitors.SegueMetrics.WEBSOCKET_LATENCY
 import static uk.ac.cam.cl.dtg.segue.dao.content.ContentMapperUtils.getSharedBasicObjectMapper;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Maps;
 import com.google.common.collect.Sets;
 import com.google.common.util.concurrent.Striped;
@@ -14,16 +12,18 @@ import com.google.inject.Inject;
 import io.prometheus.client.Histogram;
 import java.io.IOException;
 import java.nio.channels.ClosedChannelException;
+import java.time.Duration;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.locks.Lock;
+import org.eclipse.jetty.websocket.api.Callback;
 import org.eclipse.jetty.websocket.api.Session;
 import org.eclipse.jetty.websocket.api.StatusCode;
 import org.eclipse.jetty.websocket.api.annotations.OnWebSocketClose;
-import org.eclipse.jetty.websocket.api.annotations.OnWebSocketConnect;
 import org.eclipse.jetty.websocket.api.annotations.OnWebSocketError;
 import org.eclipse.jetty.websocket.api.annotations.OnWebSocketMessage;
+import org.eclipse.jetty.websocket.api.annotations.OnWebSocketOpen;
 import org.eclipse.jetty.websocket.api.annotations.WebSocket;
 import org.eclipse.jetty.websocket.api.exceptions.WebSocketTimeoutException;
 import org.slf4j.Logger;
@@ -46,7 +46,7 @@ import uk.ac.cam.cl.dtg.util.PropertiesLoader;
  *
  * @author Dan Underwood
  */
-@WebSocket(idleTimeout = USER_ALERTS_WEBSOCKET_IDLE_TIMEOUT_SECONDS)
+@WebSocket
 public class UserAlertsWebSocket implements IAlertListener {
   private static class Protocol {
     static final String HEARTBEAT = "heartbeat";
@@ -121,6 +121,21 @@ public class UserAlertsWebSocket implements IAlertListener {
   }
 
 
+  private static Callback getGenericCallback() {
+    return new Callback() {
+      @Override
+      public void succeed() {
+        Callback.super.succeed();
+      }
+
+      @Override
+      public void fail(Throwable e) {
+        log.warn(CONNECTION_FAILED_MESSAGE, e);
+        Callback.super.fail(e);
+      }
+    };
+  }
+
   /**
    * Handles incoming messages from a connected client.
    *
@@ -136,17 +151,16 @@ public class UserAlertsWebSocket implements IAlertListener {
 
     try {
       if (message.equals(Protocol.HEARTBEAT)) {
-        session.getRemote().sendString(objectMapper.writeValueAsString(ImmutableMap.of(
-            Protocol.HEARTBEAT, System.currentTimeMillis()
-        )));
+        session.sendText(objectMapper.writeValueAsString(Map.of(Protocol.HEARTBEAT, System.currentTimeMillis())),
+            getGenericCallback());
       } else if (message.equals(Protocol.USER_SNAPSHOT_NUDGE)) {
         sendUserSnapshotData();
       } else {
-        session.close(StatusCode.POLICY_VIOLATION, "Invalid message!");
+        session.close(StatusCode.POLICY_VIOLATION, "Invalid message!", getGenericCallback());
       }
     } catch (IOException e) {
       log.warn(CONNECTION_FAILED_MESSAGE, e);
-      session.close(StatusCode.SERVER_ERROR, "onText IOException");
+      session.close(StatusCode.SERVER_ERROR, "onText IOException", getGenericCallback());
     } finally {
       if (latencyTimer != null) {
         latencyTimer.observeDuration();
@@ -160,9 +174,10 @@ public class UserAlertsWebSocket implements IAlertListener {
    *
    * @param session - contains information about the session to be started
    */
-  @OnWebSocketConnect
-  public void onConnect(final Session session) {
+  @OnWebSocketOpen
+  public void onOpen(final Session session) {
     try {
+      session.setIdleTimeout(Duration.ofSeconds(USER_ALERTS_WEBSOCKET_IDLE_TIMEOUT_SECONDS));
       this.session = session;
 
       RegisteredUser validUserFromSession = userAuthenticationManager.getUserFromSession(session.getUpgradeRequest());
@@ -208,7 +223,7 @@ public class UserAlertsWebSocket implements IAlertListener {
         } else {
           log.debug("User {} attempted to open too many simultaneous WebSockets; sending TRY_AGAIN_LATER.",
               connectedUserId);
-          session.close(StatusCode.NORMAL, "TRY_AGAIN_LATER");
+          session.close(StatusCode.NORMAL, "TRY_AGAIN_LATER", getGenericCallback());
           return;
         }
 
@@ -223,18 +238,18 @@ public class UserAlertsWebSocket implements IAlertListener {
         }
       } else {
         log.debug("WebSocket connection failed! Expired or invalid session.");
-        session.close(StatusCode.POLICY_VIOLATION, "Expired or invalid session!");
+        session.close(StatusCode.POLICY_VIOLATION, "Expired or invalid session!", getGenericCallback());
       }
 
     } catch (IOException e) {
       log.warn(CONNECTION_FAILED_MESSAGE, e);
-      session.close(StatusCode.SERVER_ERROR, "onConnect IOException");
+      session.close(StatusCode.SERVER_ERROR, "onConnect IOException", getGenericCallback());
     } catch (NoUserException e) {
       log.debug(CONNECTION_FAILED_MESSAGE, e);
-      session.close(StatusCode.POLICY_VIOLATION, e.getClass().getSimpleName());
+      session.close(StatusCode.POLICY_VIOLATION, e.getClass().getSimpleName(), getGenericCallback());
     } catch (SegueDatabaseException e) {
       log.warn(CONNECTION_FAILED_MESSAGE, e);
-      session.close(StatusCode.SERVER_ERROR, "onConnect Database Error");
+      session.close(StatusCode.SERVER_ERROR, "onConnect Database Error", getGenericCallback());
     }
   }
 
@@ -256,7 +271,7 @@ public class UserAlertsWebSocket implements IAlertListener {
     Lock userLock = userLocks.get(connectedUserId);
     userLock.lock();
     try {
-      Set unsafeUsersSockets = unsafeConnectedSockets.get(connectedUserId);
+      Set<UserAlertsWebSocket> unsafeUsersSockets = unsafeConnectedSockets.get(connectedUserId);
       unsafeUsersSockets.remove(this);
       numberOfUserSockets = unsafeUsersSockets.size();
       removeUser = numberOfUserSockets == 0;
@@ -303,10 +318,10 @@ public class UserAlertsWebSocket implements IAlertListener {
    */
   private void sendAlert(final IUserAlert alert) {
     try {
-      this.session.getRemote().sendString(objectMapper.writeValueAsString(ImmutableMap.of(
-          Protocol.NOTIFICATIONS, ImmutableList.of(alert),
+      this.session.sendText(objectMapper.writeValueAsString(Map.of(
+          Protocol.NOTIFICATIONS, List.of(alert),
           Protocol.HEARTBEAT, System.currentTimeMillis()
-      )));
+      )), getGenericCallback());
     } catch (IOException e) {
       log.error("Error sending alert", e);
     }
@@ -319,10 +334,10 @@ public class UserAlertsWebSocket implements IAlertListener {
    * @throws IOException - if the WebSocket is unexpectedly closed or in an invalid state
    */
   private void sendUserSnapshotData() throws IOException {
-    session.getRemote().sendString(objectMapper.writeValueAsString(ImmutableMap.of(
+    session.sendText(objectMapper.writeValueAsString(Map.of(
         Protocol.USER_SNAPSHOT, statisticsManager.getDetailedUserStatistics(connectedUser),
         Protocol.HEARTBEAT, System.currentTimeMillis()
-    )));
+    )), getGenericCallback());
   }
 
   /**
@@ -335,9 +350,9 @@ public class UserAlertsWebSocket implements IAlertListener {
   private void sendInitialNotifications(final long userId) throws SegueDatabaseException, IOException {
     List<IUserAlert> persistedAlerts = userAlerts.getUserAlerts(userId);
     if (!persistedAlerts.isEmpty()) {
-      session.getRemote().sendString(objectMapper.writeValueAsString(ImmutableMap.of(
+      session.sendText(objectMapper.writeValueAsString(Map.of(
           Protocol.NOTIFICATIONS, persistedAlerts
-      )));
+      )), getGenericCallback());
     }
   }
 }
